--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,8 +34,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  provider: ^6.1.5
   carousel_slider: ^5.1.1
   get: 4.7.2
+  lottie: ^3.3.1
+
 
 dev_dependencies:
   flutter_test:
@@ -62,6 +65,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/photo/
+    - assets/lottie/
+
   
 
   # An image asset can refer to one or more resolution-specific "variants", see
